{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 15,
  "lineage": "00b39ba2-a7ce-9a1a-8864-b793f8ae970c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0887c22bd4754ef62",
            "arn": "arn:aws:ec2:us-east-1:058264138725:elastic-ip/eipalloc-0887c22bd4754ef62",
            "domain": "vpc",
            "id": "eipalloc-0887c22bd4754ef62",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-144-161-153.compute-1.amazonaws.com",
            "public_ip": "54.144.161.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prd-devops-eip"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-eip",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:internet-gateway/igw-06b0cde53bdcb5b70",
            "id": "igw-06b0cde53bdcb5b70",
            "owner_id": "058264138725",
            "tags": {
              "Name": "prd-devops-igw"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-igw",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops"
            },
            "vpc_id": "vpc-06d92c677740b17c7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0887c22bd4754ef62",
            "association_id": "eipassoc-0262e6ae142975833",
            "connectivity_type": "public",
            "id": "nat-0b193e2bc2bb3c6c6",
            "network_interface_id": "eni-00911eb1988486db4",
            "private_ip": "10.0.82.82",
            "public_ip": "54.144.161.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c36886c406ab1648",
            "tags": {
              "Name": "prd-devops-nat"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-nat",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:route-table/rtb-0bd1fab4d2d43fbd6",
            "id": "rtb-0bd1fab4d2d43fbd6",
            "owner_id": "058264138725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b193e2bc2bb3c6c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prd-devops-private-rt"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-private-rt",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d92c677740b17c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:route-table/rtb-0e9818f36befdad78",
            "id": "rtb-0e9818f36befdad78",
            "owner_id": "058264138725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b0cde53bdcb5b70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prd-devops-public-rt"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-public-rt",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d92c677740b17c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0430c35473e23a359",
            "route_table_id": "rtb-0bd1fab4d2d43fbd6",
            "subnet_id": "subnet-0460696ffc4572245"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b9881221aa0ff87",
            "route_table_id": "rtb-0bd1fab4d2d43fbd6",
            "subnet_id": "subnet-046948acbc7f8fdd9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0647e214c7f8e41d2",
            "route_table_id": "rtb-0e9818f36befdad78",
            "subnet_id": "subnet-0c36886c406ab1648"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5e83aeaf61ce397",
            "route_table_id": "rtb-0e9818f36befdad78",
            "subnet_id": "subnet-0c6cd70532779a6cc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-0460696ffc4572245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0460696ffc4572245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd-devops-private-us-east-1a",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-private-us-east-1a",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06d92c677740b17c7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-046948acbc7f8fdd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046948acbc7f8fdd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd-devops-private-us-east-1b",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-private-us-east-1b",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06d92c677740b17c7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-0c36886c406ab1648",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c36886c406ab1648",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd-devops-public-us-east-1a",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-public-us-east-1a",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06d92c677740b17c7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:subnet/subnet-0c6cd70532779a6cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6cd70532779a6cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264138725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd-devops-public-us-east-1b",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-public-us-east-1b",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops",
              "kubernetes.io/cluster/prd-devops-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06d92c677740b17c7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264138725:vpc/vpc-06d92c677740b17c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5e7d3e92a17985f",
            "default_route_table_id": "rtb-0854b269e77ae957b",
            "default_security_group_id": "sg-0dc4019323778c387",
            "dhcp_options_id": "dopt-097d88450c7fc568a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d92c677740b17c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0854b269e77ae957b",
            "owner_id": "058264138725",
            "tags": {
              "Name": "prd-devops-vpc"
            },
            "tags_all": {
              "Application": "vpc",
              "DeployedBy": "terraform",
              "Environment": "production",
              "Name": "prd-devops-vpc",
              "OwnerEmail": "devops@demo.com",
              "Project": "terraform networking",
              "Team": "devops"
            }
          }
        }
      ]
    }
  ]
}